--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,7 @@
 	<link rel="SHORTCUT ICON" href="<%= image_path('favicon.ico') %>" type="image/x-icon" />
 	<%= stylesheet_link_tag 'screen', 'formtastic', 'formtastic_changes' %>
 	<%= javascript_include_tag :defaults %>
-  <meta name="csrf-token" content="<%= form_authenticity_token %>" />
-  <meta name="csrf-param" content="authenticity_token" />
+  <%= csrf_meta_tag %>
 </head>
 
 <body>
